# ForFun

./: README.md
.github/workflows/: cli-rust.yml  gui-rust.yml
haskell-raytracer/: Camera.hs  Color.hs  Hittable.hs  HittableList.hs  Interval.hs  Main.hs  README.md  Ray.hs  Sphere.hs  Stuff.hs  Vec3.hs  haskell-raytracer.cabal  stack.yaml
haskell-raytracer/app/: Main.hs
haskell-raytracer/output/: low_res_scene.ppm
haskell-raytracer/src/: Camera.hs  Color.hs  Hittable.hs  HittableList.hs  Interval.hs  Ray.hs  Sphere.hs  Vec3.hs  VectorConstants.hs
haskell-raytracer/test/: Spec.hs
spellcheck-rust/: Cargo.toml
spellcheck-rust/src/: main.rs
todo-cli/src/: main.rs
todo-gui/: Cargo.toml
todo-gui/src/: main.rs
todo-gui/ui/: appwindow.slint
zig-ascii-renderer/: build.zig  build.zig.zon
zig-ascii-renderer/.zig-cache/o/fb70ba33aaac1d9312623e03d6a79d22/: linux-render
zig-ascii-renderer/src/: main.zig  particle_system.zig  renderer.zig
