name:                haskell-raytracer
version:             0.1.0.0
author:              Robert Parker Ellwanger
maintainer:          roberte3@illinois.edu
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Camera
                     , Color
                     , Hittable
                     , HittableList
                     , Interval
                     , Ray
                     , Sphere
                     , Vec3
                     , VectorConstants
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.2 && < 1.3
  default-language:    Haskell2010

executable ray-tracer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_haskell_raytracer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-raytracer
  default-language:    Haskell2010

test-suite ray-tracer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Paths_haskell_raytracer
  build-depends:       base
                     , haskell-raytracer
                     , HUnit
                     , directory
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
